Add resetRemoteCohortURL operation
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>